--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 
 <!--header section starts-->
 <header>
-<a href="#" class="logo"><i class="fas-fa-untensils"></i>resto.</a>
+<a href="#" class="logo"><i class='fas fa-utensils'></i>resto.</a>
 
 <nav class="navbar">
-    <a href="#home">home</a>
+    <a class="active" href="#home">home</a>
     <a href="#dishes">dishes</a>
     <a href="#about">about</a>
     <a href="#menu">menu</a>
     <a href="#review">review</a>
     <a href="#orders">orders</a>
 </nav>
-<p>test git hub</p>
 <div class="icons">
-    <i class="fas fa-bars" id="bars"></i>
+    <i class="fas fa-bars" id="menu-bars"></i>
     <i class="fas fa-search" id="search-icon"></i>
     <a href="#" class="fas fa-heart"></a>
     <a href="#" class="fas fa-shopping-cart"></a>
