--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 </header>
 <!--header section ends-->
 
+<!-- sreach form -->
+
+<form action="" id="search-form"><p>tutaj</p>
+    <input type="search" name="" id="search-box">
+    <label for="search-box" class="fas fa-search"></label>
+</form>
 
 
 
@@ -58,10 +64,7 @@
 
 
 
-
-
-
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
