--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
 <!--header section ends-->
 
 <!-- sreach form -->
-
-<form action="" id="search-form"><p>tutaj</p>
+<form action="" id="search-form">
     <input type="search" name="" id="search-box">
     <label for="search-box" class="fas fa-search"></label>
 </form>
 
-
+<!--end sreach form -->
 
 
 
