--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <!-- sreach form -->
 <form action="" id="search-form">
-    <input type="search" name="" id="search-box">
+    <input type="search" placeholder="search here..." id="search-box">
     <label for="search-box" class="fas fa-search"></label>
 </form>
 
