12:17 fixed fas fa-times on/off search-form

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <form action="" id="search-form">
     <input type="search" placeholder="search here..." id="search-box">
     <label for="search-box" class="fas fa-search"></label>
+    <i class="fas fa-times" id="close"></i>
 </form>
 
 <!--end sreach form -->
