update home section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,57 @@
 
 <!--end sreach form -->
 
+<!-- Home section starst -->
+<section class="home" id="home">
 
+    <div class="home-slider">
+
+        <div class="wrapper">
+
+            <div class="slide">
+                <div class="content">
+                    <span>our special dish</span>
+                    <h3>pizza italiano</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, modi! Corporis, ad?</p>
+                    <a href="" class="btn"></a>
+                </div>
+                <div class="image">
+                    <img src="home3.avif" alt="">
+                </div>
+            </div>
+
+            <div class="slide">
+                <div class="content">
+                    <span>our special dish</span>
+                    <h3>fried chicken</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, modi! Corporis, ad?</p>
+                    <a href="" class="btn"></a>
+                </div>
+                <div class="image">
+                    <img src="home2.avif" alt="">
+                </div>
+            </div>
+
+            <div class="slide">
+                <div class="content">
+                    <span>our special dish</span>
+                    <h3>spicy noodles</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, modi! Corporis, ad?</p>
+                    <a href="" class="btn"></a>
+                </div>
+                <div class="image">
+                    <img src="tasty-appetizing-classic-italian-shome1.avif" alt="">
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+</section>
+
+<!-- Home section end -->
 
 
 
