slide show css js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant responsive food</title>
 
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -45,40 +49,40 @@
 <!-- Home section starst -->
 <section class="home" id="home">
 
-    <div class="home-slider">
+    <div class="swiper home-slider">
 
-        <div class="wrapper">
+        <div class="swiper-wrapper wrapper">
 
-            <div class="slide">
+            <div class="swiper-slide slide">
                 <div class="content">
                     <span>our special dish</span>
                     <h3>pizza italiano</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, modi! Corporis, ad?</p>
-                    <a href="" class="btn"></a>
+                    <a href="" class="btn">order now</a>
                 </div>
                 <div class="image">
                     <img src="home3.avif" alt="">
                 </div>
             </div>
 
-            <div class="slide">
+            <div class="swiper-slide slide">
                 <div class="content">
                     <span>our special dish</span>
                     <h3>fried chicken</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, modi! Corporis, ad?</p>
-                    <a href="" class="btn"></a>
+                    <a href="" class="btn">order now</a>
                 </div>
                 <div class="image">
                     <img src="home2.avif" alt="">
                 </div>
             </div>
 
-            <div class="slide">
+            <div class="swiper-slide slide">
                 <div class="content">
                     <span>our special dish</span>
                     <h3>spicy noodles</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, modi! Corporis, ad?</p>
-                    <a href="" class="btn"></a>
+                    <a href="" class="btn">order now</a>
                 </div>
                 <div class="image">
                     <img src="tasty-appetizing-classic-italian-shome1.avif" alt="">
@@ -86,7 +90,7 @@
             </div>
 
         </div>
-
+        <div class="swiper-pagination"></div>
     </div>
 
 
@@ -111,9 +115,9 @@
 
 
 
-
-
-
+<!-- slide section-->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<!-- js section-->
 <script src="script.js"></script>
 
 </body>
