--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="burger.avif" alt="">
+            <img src="burger.avif" class="burger">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -127,7 +127,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="tasty-appetizing-classic-italian-shome1.avif" alt="">
+            <img src="tasty-appetizing-classic-italian-shome1.avif">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -191,21 +191,6 @@
             <a href="#" class="btn">add to cart</a>
         </div>
 
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <a href="#" class="fas fa-eye"></a>
-            <img src="nuggets2.avif" alt="">
-            <h3>tasty food</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-            <span>15.99zł</span>
-            <a href="#" class="btn">add to cart</a>
-        </div>
 
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
