--- a/index.html
+++ b/index.html
@@ -215,7 +215,44 @@
 
 <!-- dishes section ends -->
 
+<!-- about section start -->
 
+<section class="about" id="about">
+
+    <h3 class="sub-heading"> about us </h3>
+    <h1 class="heading"> why choose us </h1>
+    <div class="row">
+
+        <div class="image">
+            <img src="pierog.jpg" alt="">
+        </div>
+        <article class="content">
+            <h3>best food in the country</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quo eligendi, debitis sed error voluptatum beatae ut ad voluptatem sapiente rem ab quae aperiam perspiciatis nam, voluptate, veritatis qui totam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptate ullam minus amet repudiandae, est harum dolore pariatur magni totam.</p>
+            <div class="icons-container">
+                <div class="icons">
+                    <i class="fas fa-shipping-fast"></i>
+                    <span>free delivery</span>
+                </div>
+            
+                <div class="icons">
+                    <i class="fas fa-dollar-sign"></i>
+                    <span>easy paymants</span>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-headset"></i>
+                    <span>24/7 service</span>
+                </div>
+            </div>
+            <a href="#" class="btn">learn more</a>
+        </article>
+    </div>
+
+</section>
+
+
+<!-- about section end -->
 
 
 
