--- a/index.html
+++ b/index.html
@@ -255,6 +255,215 @@
 <!-- about section end -->
 
 
+<!-- menu section starts -->
+<section class="menu" id="menu">
+
+    <h3 class="sub-heading"> our menu </h3>
+    <h1 class="heading"> today's speciality </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <div class="image">
+                <img src="menu1.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="menu2.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="menu4.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="menu10.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="menu6.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="menu7.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="nuggets.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="menu9.avif" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="pierog.jpg" alt="latająca pizza">
+                <a href="#" class="fas fa-heart"></a>
+            </div>
+            <div class="content">
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h3>delicious food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, repellendus.</p>
+                <a href="#" class="btn">add to cart</a>
+                <span class="pirce">12.99zl</span>
+            </div>
+        </div>
+
+
+    </div>
+
+</section>
+
+
+
+
+
+
+<!-- menu section end -->
+
+
 
 
 
