menu section ready

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div class="box-container">
         <div class="box">
             <div class="image">
-                <img src="menu1.avif" alt="latająca pizza">
+                <img src="pizzkamenu.png" alt="latająca pizza" >
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -348,7 +348,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="menu6.avif" alt="latająca pizza">
+                <img src="menu6.avif" alt="latająca pizza" >
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -369,7 +369,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="menu7.avif" alt="latająca pizza">
+                <img src="donutmenu.png" alt="latająca pizza" >
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
