review section ready

--- a/index.html
+++ b/index.html
@@ -457,14 +457,112 @@
 </section>
 
 
-
-
-
-
 <!-- menu section end -->
 
+<!-- review section starts -->
+
+<section class="review" id="review">
+
+    <h3 class="sub-heading"> customer's review </h3>
+    <h1 class="heading"> what they say </h1>
+
+    <article class="swiper-container review-slider">
+
+        <div class="swiper-wrapper">
+
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="picM1avif.avif" alt="">
+                    <div class="user-info">
+                        <h3> Mateusz Kowalski</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veniam rerum eos nulla quae eveniet animi ex debitis doloribus! Dolorem corrupti, reiciendis eligendi nihil impedit hic praesentium in aspernatur eos.</p>
+
+            </div>
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="picW1.avif" alt="">
+                    <div class="user-info">
+                        <h3> Wiktoria Wolska</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veniam rerum eos nulla quae eveniet animi ex debitis doloribus! Dolorem corrupti, reiciendis eligendi nihil impedit hic praesentium in aspernatur eos.</p>
+
+            </div>
+
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="picM2.avif" alt="">
+                    <div class="user-info">
+                        <h3> Daniel Franches</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veniam rerum eos nulla quae eveniet animi ex debitis doloribus! Dolorem corrupti, reiciendis eligendi nihil impedit hic praesentium in aspernatur eos.</p>
+
+            </div>
+
+            <div class="swiper-slide slide">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="picW2.avif" alt="">
+                    <div class="user-info">
+                        <h3> Ela Nowak</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veniam rerum eos nulla quae eveniet animi ex debitis doloribus! Dolorem corrupti, reiciendis eligendi nihil impedit hic praesentium in aspernatur eos.</p>
+
+            </div>
+
+        </div>
 
 
+    </article>
+
+</section>
+
+<!-- review section ends -->
+
+<!-- orders section starts -->
+
+
+
+<!-- orders section ends -->
 
 
 
