--- a/index.html
+++ b/index.html
@@ -638,8 +638,8 @@
         <div class="box">
             <h3>follow us</h3>
             <a href="#">facebook</a>
-            <a href="#">github</a>
-            <a href="#">twitter / X </a>
+            <a href="https://github.com/dawidorpel">github</a>
+            <a href="https://twitter.com/home?lang=pl">twitter / X </a>
             <a href="#">instagram</a>
             <a href="https://www.linkedin.com/in/dawid-orpel-b07422283/">linkedin</a>
         </div>
