--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 
 <!--header section starts-->
 <header>
-<a href="#" class="logo"><i class='fas fa-utensils'></i>resto.</a>
+    <a href="#" class="logo"><i class='fas fa-utensils'></i>resto.</a>
 
-<nav class="navbar">
-    <a class="active" href="#home">home</a>
-    <a href="#dishes">dishes</a>
-    <a href="#about">about</a>
-    <a href="#menu">menu</a>
-    <a href="#review">review</a>
-    <a href="#orders">orders</a>
-</nav>
-<div class="icons">
-    <i class="fas fa-bars" id="menu-bars"></i>
-    <i class="fas fa-search" id="search-icon"></i>
-    <a href="#" class="fas fa-heart"></a>
-    <a href="#" class="fas fa-shopping-cart"></a>
-</div>
+    <nav class="navbar">
+        <a class="active" href="#home">home</a>
+        <a href="#dishes">dishes</a>
+        <a href="#about">about</a>
+        <a href="#menu">menu</a>
+        <a href="#review">review</a>
+        <a href="#orders">orders</a>
+    </nav>
+    <div class="icons">
+        <i class="fas fa-bars" id="menu-bars"></i>
+        <i class="fas fa-search" id="search-icon"></i>
+        <a href="#" class="fas fa-heart"></a>
+        <a href="#" class="fas fa-shopping-cart"></a>
+    </div>
 
 </header>
 <!--header section ends-->
@@ -627,12 +627,21 @@
 
         <div class="box">
             <h3>Quick links</h3>
-            <a href="#">home</a>
-            <a href="#">dishes</a>
-            <a href="#">about us</a>
-            <a href="#">menu</a>
-            <a href="#">review</a>
-            <a href="#">orders</a>
+            <a href="#home">home</a>
+            <a href="#dishes">dishes</a>
+            <a href="#about">about us</a>
+            <a href="#menu">menu</a>
+            <a href="#review">review</a>
+            <a href="#orders">orders</a>
+        </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#">+48 768-976-687</a>
+            <a href="#">+48 346-549-345</a>
+            <a href="#">dawidorpel@o2.pl</a>
+            <a href="#">Kraków ul.Smocza 5</a>
+            <a href="#">Warszawa ul.Powstańców 42</a>
         </div>
 
         <div class="box">
@@ -654,9 +663,11 @@
 
 <!-- footer section ends -->
 
+<!-- loader part -->
 
-
-
+<div class="loader-cotainer">
+    <img src="loader (1).gif">
+</div>
 
 
 
